<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">Espresso</string>

    <string name="number_of_engineers">Number of engineers</string>
    <string name="super_busy_probability">Probability of engineer becoming super-busy in </string>
    <string name="super_busy_time">Engineers stay super-busy for </string>
    <string name="people">people</string>
    <string name="percent">%</string>
    <string name="minutes">minutes</string>

    <string name="start_simulation">Start simulation</string>
    <string name="title_activity_simulation">Simulation Activity</string>

    <string name="hello_world">Hello world!</string>
</resources>
