<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout_main">

    <TextView android:text="@string/number_of_engineers" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_number_of_engineers"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_text_number_of_engineers"
        android:autoText="false"
        android:editable="true"
        android:enabled="true"
        android:text="30"
        android:gravity="end"
        android:layout_below="@+id/text_view_number_of_engineers"
        android:layout_alignRight="@+id/text_view_super_busy_time"
        android:layout_alignEnd="@+id/text_view_super_busy_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/super_busy_probability"
        android:id="@+id/text_view_super_busy_probability"
        android:layout_below="@+id/edit_text_number_of_engineers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_text_super_busy_probability"
        android:text="20"
        android:gravity="end"
        android:layout_below="@+id/text_view_super_busy_probability"
        android:layout_alignLeft="@+id/edit_text_number_of_engineers"
        android:layout_alignStart="@+id/edit_text_number_of_engineers" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_simulation"
        android:id="@+id/button_start_simulation"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:onClick="onButtonClickedStartSimulation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/super_busy_time"
        android:id="@+id/text_view_super_busy_time"
        android:layout_below="@+id/edit_text_super_busy_probability"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_text_super_busy_time"
        android:text="20"
        android:gravity="end"
        android:layout_below="@+id/text_view_super_busy_time"
        android:layout_alignLeft="@+id/edit_text_super_busy_probability"
        android:layout_alignStart="@+id/edit_text_super_busy_probability" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/people"
        android:id="@+id/text_view_people"
        android:layout_alignBottom="@+id/edit_text_number_of_engineers"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/percent"
        android:id="@+id/text_view_percent"
        android:layout_above="@+id/text_view_super_busy_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/minutes"
        android:id="@+id/text_view_minutes"
        android:layout_alignBottom="@+id/edit_text_super_busy_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
